refactor: update attachment handling to use duration instead of LocalDateTime for expiration